RESOLVED FIXED254567
REGRESSION (262120@main): [UI-side compositing] compositing/hidpi-non-simple-compositing-layer-with-fractional-size-and-background.html crashes
https://bugs.webkit.org/show_bug.cgi?id=254567
Summary REGRESSION (262120@main): [UI-side compositing] compositing/hidpi-non-simple-...
Simon Fraser (smfr)
Reported 2023-03-27 20:17:45 PDT
This test has many hundreds of layers, and times out talking to the GPU Process.
Attachments
Simon Fraser (smfr)
Comment 1 2023-03-27 20:17:55 PDT
Simon Fraser (smfr)
Comment 2 2023-03-27 20:29:43 PDT
EWS
Comment 3 2023-03-28 09:07:45 PDT
Committed 262220@main (2ccbd299a0e0): <https://commits.webkit.org/262220@main> Reviewed commits have been landed. Closing PR #12036 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.