REGRESSION (262120@main): [UI-side compositing] compositing/hidpi-non-simple-compositing-layer-with-fractional-size-and-background.html crashes https://bugs.webkit.org/show_bug.cgi?id=254567 rdar://107291066

Reviewed by Tim Horton.

Convert the assertion added in 262120@main to some logging, because some
layout tests with many layers hit it due to hitting the timeout in
`RemoteImageBufferProxy::ensureBackendCreated()`.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::encode const):

This affected:
compositing/hidpi-non-simple-compositing-layer-with-fractional-size-and-background.html
fast/layers/hidpi-transform-on-child-content-is-mispositioned.html
fast/sub-pixel/compositing-layers-on-subpixel-position.html

Canonical link: https://commits.webkit.org/262220@main